--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -45,3 +45,20 @@
     box-shadow: none !important;
   }
 }
+.header{
+  background-image: url(../../../assets/img/background_db.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 10px
+}
+.save-button{
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  background-color: white;
+  color: #106DB6;
+  font-size: 13px;
+  margin: 0 10px;
+}
