--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,16 +1,16 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="header" style="height: 100px; border-radius: 10px">
-      <div class="row">
-        <div style="padding: 17px 30px;color: white;">
+    <div class="header" style="height: 150px;">
+      <div >
+        <div style="padding: 15px;color: white; font-size: 16px;">
           Xin chào {{user.name}}
         </div>
         <div>
-          <button class="save-button" style="width: 170px;">Hợp đồng tạo</button>
-          <button class="save-button" style="width: 170px;">Hợp đồng cần xử lý</button>
+          <button class="save-button" style="width: 170px;">Cần xử lý ({{numberCreate}})</button>
+          <button class="receive-button" style="width: 170px;">Hợp đồng cần xử lý ({{numberReceive}})</button>
         </div>
-    </div>
+      </div>
     </div>
   </div>
   <div class="row" style="padding-top: 10px;">
