--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -46,10 +46,9 @@
   }
 }
 .header{
-  background-image: url(../../../assets/img/background_db.svg);
+  background-image: url(../../../assets/img/background_header.svg);
   background-size: cover;
   background-repeat: no-repeat;
-  border-radius: 10px
 }
 .save-button{
   border: 0px;
@@ -59,6 +58,17 @@
   box-sizing: border-box;
   background-color: white;
   color: #106DB6;
+  font-size: 13px;
+  margin: 0 10px;
+}
+.receive-button{
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  width: 100px;
+  box-sizing: border-box;
+  background-color: #51ACF4;
+  color: white;
   font-size: 13px;
   margin: 0 10px;
 }
