--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -16,6 +16,8 @@
     </div>
   </div>
 
+  <div style="padding-top: 20px;" *ngIf="contracts.length == 0;">Danh sách trống!</div>
+
   <div class="row list_header" *ngIf="contracts.length > 0;">
 
     <div class="col-md-5"></div>
