--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -1,6 +1,58 @@
 
 <div class="container-fluid">
   <div class="row">
+    <div class="col-md-4">
+      <div style="background-color: #4B71F0;border-radius: 10px; color: white;">
+        <div class="row">
+          <div class="col-md-6" style="padding: 27px;text-align: center;">
+              <div>Cần xử lý</div>
+              <div style="font-size: 30px;padding-top: 10px;">{{numberWaitProcess}}</div>
+          </div>
+          <div class="col-md-6" style="padding: 15px;">
+            <img
+              src="../../../assets/img/db_header_1.svg"
+              width="80px"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div style="background-color: #EF854B;border-radius: 10px; color: white;">
+        <div class="row">
+          <div class="col-md-6" style="padding: 27px;text-align: center;">
+              <div>Sắp hết hạn</div>
+              <div style="font-size: 30px;padding-top: 10px;">{{numberExpire}}</div>
+          </div>
+          <div class="col-md-6" style="padding: 15px;">
+            <img
+              src="../../../assets/img/db_header_2.svg"
+              width="80px"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div style="background-color: #00D0C2;border-radius: 10px; color: white;">
+        <div class="row">
+          <div class="col-md-6" style="padding: 27px;text-align: center;">
+              <div>Hoàn thành</div>
+              <div style="font-size: 30px;padding-top: 10px;">{{numberComplete}}</div>
+          </div>
+          <div class="col-md-6" style="padding: 15px;">
+            <img
+              src="../../../assets/img/db_header_3.svg"
+              width="80px"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div class="container-fluid">
+  <div class="row">
     <div class="header" style="height: 150px;">
       <div >
         <div style="padding: 15px;color: white; font-size: 16px;">
@@ -57,5 +109,5 @@
     </div>
     <div class="col-md-1"></div>
   </div>
-</div>
+</div> -->
 
