--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -16,8 +16,6 @@
     </div>
   </div>
 
-  <div style="padding-top: 20px;" *ngIf="contracts.length == 0;">Danh sách trống!</div>
-
   <div class="row list_header" *ngIf="contracts.length > 0;">
 
     <div class="col-md-5"></div>
@@ -85,6 +83,11 @@
       <div class="col-md-12 item_contract_infor">Lý do: {{item.reason_reject}}</div>
     </div> -->
   </div>
+
+  <div style="margin-top: 20px;
+  padding: 10px;
+  background-color: #eaeef3;
+  border-radius: 5px;" *ngIf="contracts.length == 0;">Danh sách trống!</div>
 
   <div class="contract_footer">
     <div class="footer_title"></div>
