--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -1,32 +1,3 @@
-.input-line {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-}
-.input-img {
-  top: 6px;
-  right: 20px;
-  position: absolute;
-}
-.input-text {
-  border: 1px solid #87CAFF;
-  padding: 7px;
-  width: 100%;
-  height: 38px;
-  outline:0px;
-  border-radius: 5px;
-}
-.btn_search{
-  align-self: flex-end;
-}
-.btn-block {
-  background-color: #106DB6;
-  color: white;
-  height: 33px;
-  font-size: inherit;
-  width: 100px;
-  border-radius: 5px;
-}
 :host ::ng-deep {
   .p-calendar {
     font-size: 13px !important;
@@ -44,36 +15,15 @@
     outline: 0 !important;
     box-shadow: none !important;
   }
-}
-.header{
-  background-image: url(../../../assets/img/background_header.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.save-button{
-  border: 0px;
-  border-radius: 5px;
-  height: 33px;
-  width: 100px;
-  box-sizing: border-box;
-  background-color: white;
-  color: #106DB6;
-  font-size: 13px;
-  margin: 0 10px;
-}
-.receive-button{
-  border: 0px;
-  border-radius: 5px;
-  height: 33px;
-  width: 100px;
-  box-sizing: border-box;
-  background-color: #51ACF4;
-  color: white;
-  font-size: 13px;
-  margin: 0 10px;
-}
-.header_1{
-  background-image: url(../../../assets/img/banner_header.svg);
+  .p-calendar-w-btn .p-datepicker-trigger {
+    background-color: #e4e5e4;
+    border: 1px solid #ced4da;
+  }
+  .p-selectbutton .p-button {
+    outline: 0 !important;
+    box-shadow: none !important;
+    height: 33px;
+  }
 }
 .item_contract_name {
   font-weight: 500;
@@ -95,4 +45,42 @@
   text-align: center;
   padding: 12px 12px 0;
   font-weight: 500;
+}
+.header_card{
+  border-radius: 30px; 
+  color: white;
+}
+.header_card:hover{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  cursor: pointer;
+}
+.header_card_1{
+  background-color: #99E6FC;
+}
+.header_card_2{
+  background-color: #EF854B;
+}
+.header_card_3{
+  background-color: #4B71F0;
+}
+.header_card_4{
+  background-color: #00D0C2;
+}
+.text_header_card{
+  padding: 27px;
+  text-align: center;
+}
+.number_header_card{
+  font-size: 30px;
+  padding-top: 10px;
+}
+.img_header_card{
+  padding: 15px;
+  text-align: center;
+}
+.body{
+  padding: 10px;
+  background-color: white;
+  border-radius: 30px;
+  border: 1px solid #C7D0E9;
 }
