--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -481,12 +481,12 @@
   </div>
 </div>
 
-<div style="display: flex">
-  <div style="margin-right: 80px"></div>
-  <div style="display: inline-block; cursor: pointer">
-    <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'them_doi_tac' | translate}}</u>
-  </div>
-</div>
+<!--<div style="display: flex">-->
+<!--  <div style="margin-right: 80px"></div>-->
+<!--  <div style="display: inline-block; cursor: pointer">-->
+<!--    <u class="label text-color" (click)="addPartner()" style="background-color: #FFFFFF">{{'them_doi_tac' | translate}}</u>-->
+<!--  </div>-->
+<!--</div>-->
 
 <div class="footer-determine" style="display: flex; justify-content: space-between">
   <div style="width: 200px;">
