--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,9 @@ body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans
     width: 100%;
   }
 }
+.pki-dialog .p-dropdown.p-component {
+  width: 100%;
+}
+.pki-dialog .p-dropdown-label.p-inputtext.p-placeholder {
+  padding-left: 0.8rem;
+}
