--- a/src/app/main/role/add-role/add-role.component.html
+++ b/src/app/main/role/add-role/add-role.component.html
@@ -2,7 +2,7 @@
     <div style="text-align: center; font-weight: bold">
       <h3 style="color: #106DB6; font-family: inherit;text-transform: uppercase;">{{this.datas.title | translate}}</h3>
     </div>
-    <form (ngSubmit)="onSubmit()" [formGroup]="addForm" class="content">
+    <form [formGroup]="addForm" class="content">
         <div class="row">
             <div class="col-md-6">
                 <div class="row">
@@ -11,6 +11,9 @@
                         <div class="input-data">
                             <input type="text" formControlName="name" autofocus>
                         </div>
+                        <div *ngIf="submitted && f.name.errors" class="invalid">
+                            <div *ngIf="f.name.errors.required">Tên vai trò không được để trống</div>
+                        </div>
                     </div>
                 </div>
                 <div class="row" style="padding-top: 10px;">
@@ -18,6 +21,9 @@
                         <div class="label text-color">Mã vai trò <span class="required-title">*</span></div>
                         <div class="input-data">
                             <input type="text" formControlName="code" autofocus>
+                        </div>
+                        <div *ngIf="submitted && f.code.errors" class="invalid">
+                            <div *ngIf="f.code.errors.required">Mã vai trò không được để trống</div>
                         </div>
                     </div>
                 </div>
@@ -32,16 +38,26 @@
             </div>
         
             <div class="col-md-6">
-                <div class="label text-color">Tên viết tắt <span class="required-title">*</span></div>
-                <div class="input-data">
-                    <input type="text" formControlName="short_name">
+                <div class="label text-color">Phân quyền <span class="required-title">*</span></div>
+                <div>
+                    <p-listbox [options]="groupedCities" [group]="true" formControlName="selectedCountries" [metaKeySelection]="false"
+                        [checkbox]="true" [filter]="true" [multiple]="true" [listStyle]="{'max-height':'250px'}" [style]="{'width':'15rem'}">
+                        <ng-template let-group pTemplate="group">
+                            <div class="p-d-flex p-ai-center">
+                            <span>{{group.label}}</span>
+                            </div>
+                        </ng-template>
+                    </p-listbox>
+                </div>
+                <div *ngIf="submitted && f.selectedCountries.errors" class="invalid">
+                    <div *ngIf="f.selectedCountries.errors.required">Phân quyền không được để trống</div>
                 </div>
             </div>
         </div>
     
         <div class="row" style="justify-content: center;padding-top: 10px;">
             <button class="cancel-button" (click)="dialog.closeAll()" type="button">Hủy</button>
-            <button class="save-button">Lưu lại</button>
+            <button class="save-button" (click)="onSubmit()">Lưu lại</button>
         </div>
     </form>
   </div>
