edit code add contract

--- a/src/app/main/contract-template/shared/model/determine-signer-template/determine-signer-template.component.html
+++ b/src/app/main/contract-template/shared/model/determine-signer-template/determine-signer-template.component.html
@@ -641,12 +641,14 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-11">
-        <div class="add_click"><a class="add_link" (click)="addPartner()"><i class="fa fa-plus-circle"></i> Thêm đối tác</a></div>
-      </div>
-    </div>
+
+<!--    ẩn tạm thời-->
+<!--    <div class="row">-->
+<!--      <div class="col-md-1"></div>-->
+<!--      <div class="col-md-11">-->
+<!--        <div class="add_click"><a class="add_link" (click)="addPartner()"><i class="fa fa-plus-circle"></i> Thêm đối tác</a></div>-->
+<!--      </div>-->
+<!--    </div>-->
   </form>
 
   <!-- <br/>
