--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   <div class="contract-determine" *ngIf="data_organization">
     <div class="col-md-1">
-      <input class="contract-total" style="width: 25px; height: 25px" type="number" [(ngModel)]="data_organization.ordering">
+      <input class="contract-total" style="width: 25px; height: 25px" type="number" [(ngModel)]="data_organization.ordering" [disabled]="is_change_party">
     </div>
     <div class="col-md-11 contract--content">
       <div class="contract__content--title">
@@ -141,7 +141,7 @@
                 <div class="participants-signature-type" style="width: 90%">
                   <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
                   <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
-                                           [settings]="dropdownSignTypeSettings" [data]="signTypeList">
+                                           [settings]="dropdownSignTypeSettings" [data]="signType_doc">
                     <ng-template #optionsTemplate let-item let-option="option"
                                  let-id="id" let-isSelected="isSelected">
                       <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -174,7 +174,7 @@
   <div class="contract-determine" *ngFor="let item of dataParnterOrganization(); let id = index"
        style="display: flex">
     <div class="col-md-1">
-      <input class="contract-total" style="width: 25px; height: 25px" type="number" [(ngModel)]="item.ordering">
+      <input class="contract-total" style="width: 25px; height: 25px" type="number" [(ngModel)]="item.ordering" [disabled]="is_change_party">
     </div>
     <div class="col-md-11 contract--content">
       <div class="contract__content--title">
@@ -366,7 +366,7 @@
                 <div class="participants-information">
                   <div class="participants-signature-type" style="width: 90%;">
                     <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
-                    <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}" [settings]="dropdownSignTypeSettings" [data]="signTypeList">
+                    <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}" [settings]="dropdownSignTypeSettings" [data]="signType_doc">
                       <ng-template #optionsTemplate let-item let-option="option"
                                    let-id="id" let-isSelected="isSelected">
                         <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -426,7 +426,7 @@
                       <div class="label text-color">{{'user.sign-type' | translate}}: <span class="required-title">*</span></div>
 
                       <ng-multiselect-dropdown [(ngModel)]="d.sign_type" placeholder="{{'choose' | translate }}"
-                                               [settings]="dropdownSignTypeSettings" [data]="signTypeList">
+                                               [settings]="dropdownSignTypeSettings" [data]="signTypeList_personal_partner">
                         <ng-template #optionsTemplate let-item let-option="option"
                                      let-id="id" let-isSelected="isSelected">
                           <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -466,6 +466,7 @@
   </div>
 </div>
 
+<!--ẩn tạm thời-->
 <!--<div style="display: flex">-->
 <!--  <div class="col-md-1"></div>-->
 <!--  <div class="col-md-10" style="display: inline-block; cursor: pointer">-->
