--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -32,8 +32,7 @@
     <div class="col-md-12">
       <div class="form-group">
         <div class="label_item">{{'contract.file' | translate}} <span class="require_star">*</span></div>
-        <input id="file-input" type="file" accept=".pdf, .doc, .docx"
-              (change)="fileChanged($event)" style="display: none;"/>
+        <input id="file-input" type="file" accept=".pdf, .doc, .docx" (change)="fileChanged($event)" style="display: none;"/>
         <div class="file-contract" (click)="addFile()">
           <img src="assets/img/upload_file.svg" alt="mobifone.contract">
           <div style="padding-top: 7px;"><span style="color: #798693;" *ngIf="this.datas.file_name==null">{{'choose.contract.file' | translate }}</span>{{this.datas.file_name}}</div>
@@ -130,7 +129,8 @@
       <div class="form-group">
         <div class="label_item">{{'expiration-date' | translate}} <span class="require_star">*</span></div>
         <div>
-          <p-calendar [(ngModel)]="sign_time" [minDate]="minDate" [showIcon]="true" dateFormat="dd/mm/yy" ></p-calendar>
+<!--          dateFormat="dd/mm/yy"-->
+          <p-calendar [(ngModel)]="sign_time" [minDate]="minDate" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
         </div>
       </div>
       <div class="form-group">
