--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <div class="label_item">{{'contract.name' | translate}} <span class="require_star">*</span></div>
         <div class="input-group">
-          <input type="text" [(ngModel)]="name" class="input_text"/>
+          <input type="text" [(ngModel)]="name" class="input_text" autofocus/>
         </div>
       </div>
       <div class="form-group">
