--- a/src/app/main/dashboard/dashboard.component.scss
+++ b/src/app/main/dashboard/dashboard.component.scss
@@ -24,6 +24,14 @@
     box-shadow: none !important;
     height: 33px;
   }
+  // .p-buttonset .p-button:first-of-type {
+  //   border-top-left-radius: 20px;
+  //   border-bottom-left-radius: 20px;
+  // }
+  // .p-buttonset .p-button:last-of-type {
+  //   border-top-right-radius: 20px;
+  //   border-bottom-right-radius: 20px;
+  // }
 }
 .item_contract_name {
   font-weight: 500;
@@ -75,7 +83,7 @@
   padding-top: 10px;
 }
 .img_header_card{
-  padding: 15px;
+  padding: 20px;
   text-align: center;
 }
 .body{
