--- a/src/app/main/role/add-role/add-role.component.html
+++ b/src/app/main/role/add-role/add-role.component.html
@@ -40,8 +40,8 @@
             <div class="col-md-6">
                 <div class="label text-color">Phân quyền <span class="required-title">*</span></div>
                 <div>
-                    <p-listbox [options]="groupedCities" [group]="true" formControlName="selectedCountries" [metaKeySelection]="false"
-                        [checkbox]="true" [filter]="true" [multiple]="true" [listStyle]="{'max-height':'250px'}" [style]="{'width':'15rem'}">
+                    <p-listbox [options]="groupedRole" [group]="true" formControlName="selectedCountries" [metaKeySelection]="false"
+                        [checkbox]="true" [filter]="true" [multiple]="true" [listStyle]="{'max-height':'250px'}" [style]="{'width':'100%'}">
                         <ng-template let-group pTemplate="group">
                             <div class="p-d-flex p-ai-center">
                             <span>{{group.label}}</span>
