--- a/src/app/main/role/detail-role/detail-role.component.html
+++ b/src/app/main/role/detail-role/detail-role.component.html
@@ -13,7 +13,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">  
+                <div class="row" style="padding-top: 10px;">  
                     <div class="col-md-12">  
                         <div class="label_item">Mã vai trò</div>
                         <div>
@@ -21,13 +21,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">  
+                <div class="row" style="padding-top: 10px;">  
                     <div class="col-md-12">  
                         <div class="label_item">Ghi chú</div>
                         <div>
                             <div [innerHTML]="role" class="input_text"></div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="label text-color">Phân quyền</div>
+                <div>
+                    <p-listbox [options]="groupedRole" [group]="true" [(ngModel)]="selectedRole" 
+                        [checkbox]="true" [multiple]="true"  [listStyle]="{'max-height':'300px'}" [style]="{'width':'100%'}">
+                        <ng-template let-group pTemplate="group">
+                            <div class="p-d-flex p-ai-center">
+                            <span>{{group.label}}</span>
+                            </div>
+                        </ng-template>
+                    </p-listbox>
                 </div>
             </div>
         </div>
