--- a/src/app/main/contract-type/contract-type.component.html
+++ b/src/app/main/contract-type/contract-type.component.html
@@ -43,6 +43,14 @@
       </ng-template> 
     </p-table>
   </div>
+
+  <div *ngIf="list.length == 0" 
+  style="height: 100px;display: table;top: 0;left: 0;width: 100%;text-align: center;margin-top: 20px;">
+    <div style="display: table-cell;vertical-align: middle;">
+      <img src="../../../assets/img/empty_data.svg"/>
+      <div>Danh sách trống!</div>
+    </div>
+  </div>
 </div>
  
   
