--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -107,7 +107,7 @@
         style="height: 453px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
         <div style="display: table-cell;vertical-align: middle;">
           <img src="../../../assets/img/empty_data.svg"/>
-          <div>Danh sách trống!</div>
+          <div style="color: #94A7C6">Không có dữ liệu!</div>
         </div>
       </div>
         <div *ngIf="contracts.length > 0" style="height: 453px;"> 
