--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -46,7 +46,7 @@
           <div ngbDropdown class="d-inline-block">
             <div class="social-icons" ngbDropdownToggle>
                 <span class="user_login"></span>
-                <div class="label">{{'account' | translate }}</div>
+                <div class="label">{{nameCurrentUser}}</div>
             </div>
 
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="drop_menu">
